--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server/index"
+    "dev": "nodemon server/index",
+    "start": "node server/index"
   },
   "author": "",
   "license": "ISC",
